apps/istio-config/istio-local.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gw
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "local.cmoreira.dev"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - local.cmoreira.dev
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: generic-vs
  namespace: istio-system
spec:
  hosts:
    - "local.cmoreira.dev"
  gateways:
    - istio-gw
  http:
    - match:
        - uri:
            prefix: "/echo"
      route:
        - destination:
            host: echoserver-service.echoserver.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana-service.grafana-server.svc.cluster.local
            port:
              number: 3000
    - match:
        - uri:
            prefix: /proxmox
      route:
        - destination:
            host: 192.168.1.2
            port:
              number: 8006
